--- a/pom.xml
+++ b/pom.xml
@@ -14,27 +14,25 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- JSF -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>2.2.13</version>
-		</dependency>
-
-		<!-- JSF -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
-			<version>2.2.13</version>
-		</dependency>
-
-		<!-- PrimeFaces -->
+		
+		<!-- primefaces -->
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
 			<version>6.1</version>
 		</dependency>
+
+		<!-- jsf -->
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.2.13</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.2.13</version>
+		</dependency>	
 
 		<!-- CDI -->
 		<dependency>
@@ -52,7 +50,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Métodos uteis para manipulação de String, métodos e etc -->
+		<!-- uteis -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -66,7 +64,7 @@
 			<version>4.3.0.Final</version>
 		</dependency>
 
-		<!-- DEPENDENCIA MYSQL -->
+		<!-- mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -93,7 +91,6 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-
 
 	</dependencies>
 	<build>
