--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- uteis -->
+		<!-- util -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
